<resources>
    <string name="app_name">Personal Journal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="no_data_available">No Data Available</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_new">Add New Item</string>
    <string name="feeling_msg">How do you right now?</string>
    <string name="notes">Notes</string>
    <string name="wrtie_here">Write here…</string>
    <string name="save">Save Notes</string>
    <string name="error_description">Please enter notes</string>
    <string name="error_mood">Please select your mood from color labels</string>
    <string name="success_msg">Notes Added Successfully</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="normal">Normal</string>
    <string name="journals_label">All Notes</string>
    <string name="new_journal">New Note</string>
    <string name="entities">Entities</string>
</resources>