<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".ui.newnote.NewNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_feeling_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feeling_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_mood_choice_labels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_feeling_msg">

            <TextView
                android:text="@string/good"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/normal"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1" />

            <TextView
                android:text="@string/bad"
                android:layout_width="0dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_mood_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_mood_choice_labels">

            <View
                android:id="@+id/view_good"
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/good_mood_unselected_bg" />

            <View
                android:id="@+id/view_normal"
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/normal_mood_unselected_bg" />

            <View
                android:id="@+id/view_bad"
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/bad_mood_unselected_bg" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_notes_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_mood_choice" />

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:background="@drawable/edittext_bg"
            android:gravity="start"
            android:hint="@string/wrtie_here"
            android:maxLength="500"
            android:maxLines="10"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_notes_heading" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:backgroundTint="@color/black"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingHorizontal="@dimen/_40sdp"
            android:textColor="@color/white"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_notes" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>